<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mini_bg"
        android:orientation="vertical"
        android:padding="20dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_phone">
            <TextView
                android:id="@+id/phone_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/persional_center_phone"
                android:textColor="@color/home_text_color"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/phone_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/phone_text"
                android:layout_alignBaseline="@+id/phone_text"
                android:text="@string/phone_contact_num"
                android:textColor="@color/home_text_color"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/weixin_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/weixin"
                android:textColor="@color/home_text_color"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/weixin_text"
                android:layout_alignBaseline="@+id/weixin_text"
                android:text="@string/weixin_contact_num"
                android:textColor="@color/home_text_color"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/moge_company"
        android:textColor="@color/detail_gray"
        android:textSize="16sp" />

</RelativeLayout>
