<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical" >

    <com.moge.ebox.phone.ui.customview.Head
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/style_item_line_ver"
        android:layout_marginTop="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/table_head" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="6dp"
                android:text="@string/community"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="6dp"
                android:layout_marginTop="8dp"
                android:text="@string/box"
                android:textSize="18sp" />
        </RelativeLayout>

        <View style="@style/style_item_line_hor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/small_box"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View style="@style/style_item_line_hor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/medium_box"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View style="@style/style_item_line_hor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/big_box"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View style="@style/style_item_line_ver" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/refresh_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#000000"
        android:scrollbars="none" />

</LinearLayout>