<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/exit_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            style="@style/style_home_line_ver"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="6dp"
            android:background="@color/darkgray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/confim_exit"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_ok"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_ok"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>