<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/base_bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_empty_hight"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View style="@style/style_item_line_hor" />

        <TextView
            android:id="@+id/tv_box_samll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/small_box"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View style="@style/style_item_line_hor" />

        <TextView
            android:id="@+id/tv_box_medium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/medium_box"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View style="@style/style_item_line_hor" />

        <TextView
            android:id="@+id/tv_box_big"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/big_box"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View style="@style/style_item_line_ver" />

</LinearLayout>